==> snmqwq/esp-idf-mpr121/components/MPR121/mpr121.c <==
#include <stdlib.h>
#include <string.h>
#include <inttypes.h>
#include <stdbool.h>
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include "esp_log.h"
#include "driver/i2c_master.h"
#include "driver/gpio.h"
#include "mpr121.h"
#define NOT_INITED_BIT 0
#define ADDRESS_UNKNOWN_BIT 1
#define READBACK_FAIL_BIT 2
#define OVERCURRENT_FLAG_BIT 3
#define OUT_OF_RANGE_BIT 4

void MPR121_setRegister(MPR121_t * dev, uint8_t reg, uint8_t value){

	ESP_LOGD(TAG, "setRegister reg=0x%02x value=0x%02x", reg, value);
	bool wasRunning = false;;

	if(reg==MPR121_ECR){	// if we are modding MPR121_ECR, update our internal running status
		if(value&0x3F){
			dev->running = true;
		} else {
			dev->running = false;
		}
	} else if(reg<MPR121_CTL0){
		wasRunning = dev->running;
		if(wasRunning) MPR121_stop(dev);	// we should ALWAYS be in stop mode for this
								// unless modding MPR121_ECR or GPIO / LED register
	}

#if 0
		Wire.beginTransmission(address);
		Wire.write(reg);
		Wire.write(value);
		if(Wire.endTransmission()!=0){
			dev->error |= 1<<ADDRESS_UNKNOWN_BIT; // set address unknown bit
		} else {
			dev->error &= ~(1<<ADDRESS_UNKNOWN_BIT);
		}
#endif

#if 0
	i2c_cmd_handle_t cmd = i2c_cmd_link_create();
	i2c_master_start(cmd);
	i2c_master_write_byte(cmd, (dev->address << 1) | I2C_MASTER_WRITE, true);
	i2c_master_write_byte(cmd, reg, true);
	i2c_master_write_byte(cmd, value, true);
	i2c_master_stop(cmd);
#endif

	i2c_device_config_t dev_cfg = {
		.dev_addr_length = I2C_ADDR_BIT_LEN_7,
		.device_address = dev->address,  // 设备地址
		.scl_speed_hz = 50000,  // 100kHz
	};

	i2c_master_dev_handle_t dev_handle;
	i2c_master_bus_handle_t bus_handle;
	ESP_ERROR_CHECK(i2c_master_get_bus_handle(I2C_NUM, &bus_handle));
	ESP_ERROR_CHECK(i2c_master_bus_add_device(bus_handle, &dev_cfg, &dev_handle));
	uint8_t write_buf[2] = {reg, value};  // reg是寄存器地址，value是要写入的值
	esp_err_t espRc = i2c_master_transmit(dev_handle, write_buf, sizeof(write_buf), -1);
	if (espRc == ESP_OK) {
		ESP_LOGD(TAG, "setRegister reg=0x%02x value=0x%02x successfully", reg, value);
		dev->error &= ~(1<<ADDRESS_UNKNOWN_BIT);
	} else {
		ESP_LOGE(TAG, "setRegister reg=0x%02x value=0x%02x failed. code: 0x%02x", reg, value, espRc);
		dev->error |= 1<<ADDRESS_UNKNOWN_BIT; // set address unknown bit
	}
	ESP_ERROR_CHECK(i2c_master_bus_rm_device(dev_handle));

	if(wasRunning) MPR121_run(dev);		// restore run mode if necessary
}

uint8_t MPR121_getRegister(MPR121_t * dev, uint8_t reg) {
    ESP_LOGD(TAG, "getRegister reg=0x%02x", reg);
    uint8_t scratch = 0;

    uint8_t buf[2];
    memset(buf, 0, 2);

    i2c_device_config_t dev_cfg = {
        .dev_addr_length = I2C_ADDR_BIT_LEN_7,
        .device_address = dev->address,  // 设备地址
        .scl_speed_hz = 50000,  // 降低频率为 50kHz
    };

    i2c_master_dev_handle_t dev_handle;
    i2c_master_bus_handle_t bus_handle;
    esp_err_t ret = i2c_master_get_bus_handle(I2C_NUM, &bus_handle);
    if (ret != ESP_OK) {
        ESP_LOGE(TAG, "Failed to get I2C bus handle: 0x%02x", ret);
        return 0;
    }

    ret = i2c_master_bus_add_device(bus_handle, &dev_cfg, &dev_handle);
    if (ret != ESP_OK) {
        ESP_LOGE(TAG, "Failed to add I2C device: 0x%02x", ret);
        return 0;
    }

    uint8_t write_buf[1] = {reg};  // reg是寄存器地址
    uint8_t read_buf[1] = {0};     // 用于存储读取的数据
    esp_err_t espRc = i2c_master_transmit_receive(dev_handle, write_buf, sizeof(write_buf), read_buf, sizeof(read_buf), -1);

    if (espRc == ESP_OK) {
        dev->error &= ~(1 << ADDRESS_UNKNOWN_BIT);
        scratch = read_buf[0];
        ESP_LOGD(TAG, "getRegister reg=0x%02x successfully scratch=0x%02x", reg, scratch);
    } else {
        ESP_LOGE(TAG, "getRegister reg=0x%02x failed. code: 0x%02x", reg, espRc);
        dev->error |= 1 << ADDRESS_UNKNOWN_BIT; // set address unknown bit
    }

    ESP_ERROR_CHECK(i2c_master_bus_rm_device(dev_handle));

    // auto update errors for registers with error data
    if (reg == MPR121_TS2 && ((scratch & 0x80) != 0)) {
        ESP_LOGW(TAG, "Overcurrent detected in MPR121_TS2: 0x%02x", scratch);
        dev->error |= 1 << OVERCURRENT_FLAG_BIT;
    } else {
        dev->error &= ~(1 << OVERCURRENT_FLAG_BIT);
    }

    if ((reg == MPR121_OORS1 || reg == MPR121_OORS2) && (scratch != 0)) {
        ESP_LOGW(TAG, "Out of range detected in register 0x%02x: 0x%02x", reg, scratch);
        dev->error |= 1 << OUT_OF_RANGE_BIT;
    } else {
        dev->error &= ~(1 << OUT_OF_RANGE_BIT);
    }

    return scratch;
}

bool MPR121_begin(MPR121_t * dev, int16_t address, int16_t touchThreshold, int16_t releaseThreshold, int16_t interruptPin, int16_t sda, int16_t scl){

	// SDA and SCL should idle high, but MPR121 can get stuck waiting to complete a transaction
	// this code detects this state and releases us from it

#if 0
	//boolean stuck_transaction = false;
	bool stuck_transaction = false;
	uint8_t stuck_transaction_retry_count = 0;
	const uint8_t stuck_transaction_retry_MAX = 10;

	::pinMode( PIN_WIRE_SDA, INPUT_PULLUP );
	::pinMode( PIN_WIRE_SCL, INPUT_PULLUP );

	do{
		if(( ::digitalRead( PIN_WIRE_SDA ) == LOW ) && ( ::digitalRead( PIN_WIRE_SCL ) == HIGH )){
			Serial.println("MPR121_begin stuck_transaction = true");
			stuck_transaction = true;
			::pinMode( PIN_WIRE_SCL, OUTPUT );
			::digitalWrite( PIN_WIRE_SCL, LOW );
			delay( 1 ); // this is way longer than required (would be 1.25us at 400kHz) but err on side of caution
			::pinMode( PIN_WIRE_SCL, INPUT_PULLUP );
			stuck_transaction_retry_count++;
		} else {
			Serial.println("MPR121_begin stuck_transaction = false");
			stuck_transaction = false;
		}
	} while ( stuck_transaction && ( stuck_transaction_retry_count < stuck_transaction_retry_MAX ));

	// TODO: add new error code that can be handled externally
	if( stuck_transaction_retry_count > 0){
		if( stuck_transaction ){
		} else {
		}
	}

	// now we've released (if necessary) we can get on with things
	Wire.begin();
#endif

	// addresses only valid 0x5A to 0x5D - if we don't change the address it stays at default
	if(address>=0x5A && address<=0x5D)
	{
		dev->address = address; // need to be specific here
	}

	dev->error &= ~(1<<NOT_INITED_BIT); // clear NOT_INITED error flag

	if( MPR121_reset(dev) ){
		// default values...
		//MPR121_applySettings(dev, dev->defaultSettings );
		MPR121_settingsType(&(dev->defaultSettings));
		MPR121_applySettings(dev);

		// only apply thresholds if they differ from existing defaults
		if( touchThreshold != dev->defaultSettings._TTHRESH ){
			MPR121_setTouchThresholdAll(dev, touchThreshold );
		}

		if( releaseThreshold != dev->defaultSettings._RTHRESH ){
			MPR121_setReleaseThresholdAll(dev, releaseThreshold );
		}

		if( interruptPin != dev->defaultSettings._INTERRUPT ){
			MPR121_setInterruptPin(dev, interruptPin );
		}

		return true;

	} else {
		return false;
	}
}

void MPR121_applySettings(MPR121_t * dev){
	bool wasRunning = dev->running;
	if(wasRunning) MPR121_stop(dev);	// can't change most regs when running - checking
							// here avoids multiple stop() / run() calls

	MPR121_setRegister(dev, MPR121_MHDR, dev->defaultSettings._MHDR);
	MPR121_setRegister(dev, MPR121_NHDR, dev->defaultSettings._NHDR);
	MPR121_setRegister(dev, MPR121_NCLR, dev->defaultSettings._NCLR);
	MPR121_setRegister(dev, MPR121_FDLR, dev->defaultSettings._FDLR);
	MPR121_setRegister(dev, MPR121_MHDF, dev->defaultSettings._MHDF);
	MPR121_setRegister(dev, MPR121_NHDF, dev->defaultSettings._NHDF);
	MPR121_setRegister(dev, MPR121_NCLF, dev->defaultSettings._NCLF);
	MPR121_setRegister(dev, MPR121_FDLF, dev->defaultSettings._FDLF);
	MPR121_setRegister(dev, MPR121_NHDT, dev->defaultSettings._NHDT);
	MPR121_setRegister(dev, MPR121_NCLT, dev->defaultSettings._NCLT);
	MPR121_setRegister(dev, MPR121_FDLT, dev->defaultSettings._FDLT);
	MPR121_setRegister(dev, MPR121_MHDPROXR, dev->defaultSettings._MHDPROXR);
	MPR121_setRegister(dev, MPR121_NHDPROXR, dev->defaultSettings._NHDPROXR);
	MPR121_setRegister(dev, MPR121_NCLPROXR, dev->defaultSettings._NCLPROXR);
	MPR121_setRegister(dev, MPR121_FDLPROXR, dev->defaultSettings._FDLPROXR);
	MPR121_setRegister(dev, MPR121_MHDPROXF, dev->defaultSettings._MHDPROXF);
	MPR121_setRegister(dev, MPR121_NHDPROXF, dev->defaultSettings._NHDPROXF);
	MPR121_setRegister(dev, MPR121_NCLPROXF, dev->defaultSettings._NCLPROXF);
	MPR121_setRegister(dev, MPR121_FDLPROXF, dev->defaultSettings._FDLPROXF);
	MPR121_setRegister(dev, MPR121_NHDPROXT, dev->defaultSettings._NHDPROXT);
	MPR121_setRegister(dev, MPR121_NCLPROXT, dev->defaultSettings._NCLPROXT);
	MPR121_setRegister(dev, MPR121_FDLPROXT, dev->defaultSettings._FDLPROXT);
	MPR121_setRegister(dev, MPR121_DTR, dev->defaultSettings._DTR);
	MPR121_setRegister(dev, MPR121_AFE1, dev->defaultSettings._AFE1);
	MPR121_setRegister(dev, MPR121_AFE2, dev->defaultSettings._AFE2);
	MPR121_setRegister(dev, MPR121_ACCR0, dev->defaultSettings._ACCR0);
	MPR121_setRegister(dev, MPR121_ACCR1, dev->defaultSettings._ACCR1);
	MPR121_setRegister(dev, MPR121_USL, dev->defaultSettings._USL);
	MPR121_setRegister(dev, MPR121_LSL, dev->defaultSettings._LSL);
	MPR121_setRegister(dev, MPR121_TL, dev->defaultSettings._TL);

	MPR121_setRegister(dev, MPR121_ECR, dev->defaultSettings._ECR);

	dev->error &= ~(1<<NOT_INITED_BIT); // clear not inited error as we have just inited!
	MPR121_setTouchThresholdAll(dev, dev->defaultSettings._TTHRESH);
	MPR121_setReleaseThresholdAll(dev, dev->defaultSettings._RTHRESH);
	//MPR121_setInterruptPin(dev, dev->defaultSettings._INTERRUPT);

	if(wasRunning) MPR121_run(dev);
}

bool MPR121_updateFilteredData(MPR121_t * dev){
	if(!MPR121_isInited(dev)) return(false);

	uint8_t buf[26];
	memset (buf, 0, 26);
	uint8_t LSB, MSB;

	if(MPR121_touchStatusChanged(dev)) {
		dev->autoTouchStatusFlag = true;
	}

  for(int i=0; i<26; i++){ // 13 filtered values
    buf[i] = MPR121_getRegister(dev, MPR121_E0FDL+i);
  }

	for(int i=0; i<13; i++){ // 13 filtered values
		if(MPR121_touchStatusChanged(dev)) {
			dev->autoTouchStatusFlag = true;
		}
		LSB = buf[i*2];
		if(MPR121_touchStatusChanged(dev)) {
			dev->autoTouchStatusFlag = true;
		}
		MSB = buf[i*2+1];
		dev->filteredData[i] = ((MSB << 8) | LSB);
	}

	return true;

#if 0
	uint8_t LSB, MSB;

	Wire.beginTransmission(address);
	Wire.write(MPR121_E0FDL); // set address register to read from the start of the
								//filtered data
	Wire.endTransmission(false); // repeated start

	if(MPR121_touchStatusChanged(dev)) {
		dev->autoTouchStatusFlag = true;
	}

	if(Wire.requestFrom(address,(uint8_t)26)==26){
		for(int i=0; i<13; i++){ // 13 filtered values
			if(MPR121_touchStatusChanged(dev)) {
				dev->autoTouchStatusFlag = true;
			}
			LSB = Wire.read();
			if(MPR121_touchStatusChanged(dev)) {
				dev->autoTouchStatusFlag = true;
			}
			MSB = Wire.read();
			dev->filteredData[i] = ((MSB << 8) | LSB);
		}
		return(true);
	} else {
		// if we don't get back all 26 values we requested, don't update the FDAT values
		// and return false
		return(false);
	}
#endif
}

bool MPR121_updateBaselineData(MPR121_t * dev){
	if(!MPR121_isInited(dev)) return(false);

	uint8_t buf[13];
	memset (buf, 0, 13);

	if(MPR121_touchStatusChanged(dev)) {
		dev->autoTouchStatusFlag = true;
	}

	for(int i=0; i<13; i++){ // 13 filtered values
		buf[i] = MPR121_getRegister(dev, MPR121_E0BV+i);
		if(MPR121_touchStatusChanged(dev)) {
			dev->autoTouchStatusFlag = true;
		}
		dev->baselineData[i] = buf[i]<<2;
	}

	return true;

#if 0
	Wire.beginTransmission(address);
	Wire.write(MPR121_E0BV);	// set address register to read from the start of the
								// baseline data
	Wire.endTransmission(false); // repeated start

	if(MPR121_touchStatusChanged(dev)) {
		dev->autoTouchStatusFlag = true;
	}

	if(Wire.requestFrom(address,(uint8_t)13)==13){
		for(int i=0; i<13; i++){ // 13 filtered values
			if(MPR121_touchStatusChanged(dev)) {
				dev->autoTouchStatusFlag = true;
			}
			dev->baselineData[i] = Wire.read()<<2;
		}
		return(true);
		} else {
			// if we don't get back all 26 values we requested, don't update the BVAL values
			// and return false
		return(false);
	}
#endif
}

bool MPR121_autoSetElectrodeCDCAll(MPR121_t * dev){
	bool scratch = true;
	for(uint8_t i=0; i<MPR121_getNumEnabledElectrodes(dev); i++){
		scratch = MPR121_autoSetElectrodeCDCDefault(dev, i) ? scratch : false;
	}

	return(scratch);
}
