==> ShalimovV/d_watch_v2_wb55/Core/Src/MPR121.c <==
#include <stdlib.h>
#include <string.h>
#include <inttypes.h>
#include "MPR121.h"
#include "cmsis_os.h"
#define NOT_INITED_BIT 			0
#define ADDRESS_UNKNOWN_BIT 	1
#define READBACK_FAIL_BIT 		2
#define OVERCURRENT_FLAG_BIT 	3
#define OUT_OF_RANGE_BIT 		4
#define I2C_TIMEOUT				2

void MPR121_setRegister(uint8_t reg, uint8_t value){

  bool wasRunning = false;
  uint8_t temp_reg = 0;

  if(reg==MPR121_ECR){  // if we are modding MPR121_ECR, update our internal running status
    if(value&0x3F){
      running = true;
    } else {
      running = false;
    }
  } else if(reg<MPR121_CTL0){
    wasRunning = running;
    if(wasRunning) MPR121_stop();  // we should ALWAYS be in stop mode for this
                // unless modding MPR121_ECR or GPIO / LED register
  }

  taskENTER_CRITICAL();
    if(HAL_I2C_Mem_Write(i2c_handle, address << 1, reg, 1, &value, 1, I2C_TIMEOUT) != HAL_OK){
      error |= 1<<ADDRESS_UNKNOWN_BIT; // set address unknown bit
    } else {
      error &= ~(1<<ADDRESS_UNKNOWN_BIT);
      if (HAL_I2C_Mem_Read(i2c_handle, address << 1, reg, 1, &temp_reg, 1, I2C_TIMEOUT) == HAL_OK) {
    	  if (value == temp_reg) write_fail = false;
    	  else {
    		  HAL_I2C_Mem_Read(i2c_handle, address << 1, MPR121_TS2, 1, &temp_reg, 1, I2C_TIMEOUT);
    		  if((temp_reg&0x80)!=0){
    		        error |= 1<<OVERCURRENT_FLAG_BIT;
    		  }
    		  write_fail = true;
    	  }
      }
    }
    taskEXIT_CRITICAL();
    if(wasRunning) MPR121_run();   // restore run mode if necessary
}

uint8_t MPR121_getRegister(uint8_t reg){
	uint8_t scratch = 0;

	taskENTER_CRITICAL();
    if(HAL_I2C_Mem_Read(i2c_handle, address << 1, reg, 1, &scratch, 1, I2C_TIMEOUT) == HAL_OK){  // just a single byte
      error &= ~(1<<ADDRESS_UNKNOWN_BIT); // all good, clear the bit
    } else {
      error |= 1<<ADDRESS_UNKNOWN_BIT; //set the bit - something went wrong
    }
    taskEXIT_CRITICAL();
    // auto update errors for registers with error data
    if(reg == MPR121_TS2 && ((scratch&0x80)!=0)){
      error |= 1<<OVERCURRENT_FLAG_BIT;
    } else {
      error &= ~(1<<OVERCURRENT_FLAG_BIT);
    }
    if((reg == MPR121_OORS1 || reg == MPR121_OORS2) && (scratch!=0)){
      error |= 1<<OUT_OF_RANGE_BIT;
    } else {
      error &= ~(1<<OUT_OF_RANGE_BIT);
    }
    return scratch;
}

bool MPR121_begin(I2C_HandleTypeDef *h_i2c, uint8_t touchThreshold, uint8_t releaseThreshold){

  // SDA and SCL should idle high, but MPR121 can get stuck waiting to complete a transaction
  // this code detects this state and releases us from it
	i2c_handle = h_i2c;

  // addresses only valid 0x5A to 0x5D - if we don't change the address it stays at default
  if(address>=0x5A && address<=0x5D)
  {
    address = address; // need to be specific here
  }

  error &= ~(1<<NOT_INITED_BIT); // clear NOT_INITED error flag

  if( MPR121_reset() ){
    // default values...
	  // default values in initialisation list
	  	defaultSettings.TTHRESH = 40;
	  	defaultSettings.RTHRESH = 20;
	  	defaultSettings.INTERRUPT = 4;   // note that this is not a hardware interrupt, just the digital
	                    // pin that the MPR121 ~INT pin is connected to
	  	defaultSettings.MHDR = 		0x01;
	  	defaultSettings.NHDR = 		0x01;
	  	defaultSettings.NCLR = 		0x10;
	  	defaultSettings.FDLR = 		0x20;
	  	defaultSettings.MHDF = 		0x01;
	  	defaultSettings.NHDF = 		0x01;
	  	defaultSettings.NCLF =		0x10;
	  	defaultSettings.FDLF = 		0x20;
	  	defaultSettings.NHDT = 		0x01;
	  	defaultSettings.NCLT = 		0x10;
	  	defaultSettings.FDLT = 		0xFF;
	  	defaultSettings.MHDPROXR = 	0x0F;
	  	defaultSettings.NHDPROXR = 	0x0F;
	  	defaultSettings.NCLPROXR = 	0x00;
	  	defaultSettings.FDLPROXR = 	0x00;
	  	defaultSettings.MHDPROXF = 	0x01;
	  	defaultSettings.NHDPROXF = 	0x01;
	  	defaultSettings.NCLPROXF = 	0xFF;
	  	defaultSettings.FDLPROXF = 	0xFF;
	  	defaultSettings.NHDPROXT = 	0x00;
	  	defaultSettings.NCLPROXT = 	0x00;
	  	defaultSettings.FDLPROXT = 	0x00;
	  	defaultSettings.DTR = 		0x11;
	  	defaultSettings.AFE1 = 		0xFF;
	  	defaultSettings.AFE2 = 		0x30;
	  	defaultSettings.ECR = 		0xCC; // default to fast baseline startup and 12 electrodes enabled, no prox
	  	defaultSettings.ACCR0 = 	0x00;
	  	defaultSettings.ACCR1 = 	0x00;
	  	defaultSettings.USL =		0x00;
	  	defaultSettings.LSL = 		0x00;
	  	defaultSettings.TL = 		0x00;

	  MPR121_applySettings( &defaultSettings );

    // only apply thresholds if they differ from existing defaults
    if( touchThreshold != defaultSettings.TTHRESH ){
    	MPR121_setTouchThreshold_all( touchThreshold );
    }

    if( releaseThreshold != defaultSettings.RTHRESH ){
    	MPR121_setReleaseThreshold_all( releaseThreshold );
    }

    return true;

  } else {
    return false;
  }
}

void MPR121_applySettings(MPR121_settings_type *settings){
  bool wasRunning = running;
  if(wasRunning) MPR121_stop();  // can't change most regs when running - checking
              // here avoids multiple stop() / run() calls

  MPR121_setRegister(MPR121_MHDR,settings->MHDR);
  MPR121_setRegister(MPR121_NHDR,settings->NHDR);
  MPR121_setRegister(MPR121_NCLR,settings->NCLR);
  MPR121_setRegister(MPR121_FDLR,settings->FDLR);
  MPR121_setRegister(MPR121_MHDF,settings->MHDF);
  MPR121_setRegister(MPR121_NHDF,settings->NHDF);
  MPR121_setRegister(MPR121_NCLF,settings->NCLF);
  MPR121_setRegister(MPR121_FDLF,settings->FDLF);
  MPR121_setRegister(MPR121_NHDT,settings->NHDT);
  MPR121_setRegister(MPR121_NCLT,settings->NCLT);
  MPR121_setRegister(MPR121_FDLT,settings->FDLT);
  MPR121_setRegister(MPR121_MHDPROXR,settings->MHDPROXR);
  MPR121_setRegister(MPR121_NHDPROXR,settings->NHDPROXR);
  MPR121_setRegister(MPR121_NCLPROXR,settings->NCLPROXR);
  MPR121_setRegister(MPR121_FDLPROXR,settings->FDLPROXR);
  MPR121_setRegister(MPR121_MHDPROXF,settings->MHDPROXF);
  MPR121_setRegister(MPR121_NHDPROXF,settings->NHDPROXF);
  MPR121_setRegister(MPR121_NCLPROXF,settings->NCLPROXF);
  MPR121_setRegister(MPR121_FDLPROXF,settings->FDLPROXF);
  MPR121_setRegister(MPR121_NHDPROXT,settings->NHDPROXT);
  MPR121_setRegister(MPR121_NCLPROXT,settings->NCLPROXT);
  MPR121_setRegister(MPR121_FDLPROXT,settings->FDLPROXT);
  MPR121_setRegister(MPR121_DTR, settings->DTR);
  MPR121_setRegister(MPR121_AFE1, settings->AFE1);
  MPR121_setRegister(MPR121_AFE2, settings->AFE2);
  MPR121_setRegister(MPR121_ACCR0, settings->ACCR0);
  MPR121_setRegister(MPR121_ACCR1, settings->ACCR1);
  MPR121_setRegister(MPR121_USL, settings->USL);
  MPR121_setRegister(MPR121_LSL, settings->LSL);
  MPR121_setRegister(MPR121_TL, settings->TL);

  MPR121_setRegister(MPR121_ECR, settings->ECR);

  error &= ~(1<<NOT_INITED_BIT); // clear not inited error as we have just inited!
  MPR121_setTouchThreshold_all(settings->TTHRESH);
  MPR121_setReleaseThreshold_all(settings->RTHRESH);


  if(wasRunning) MPR121_run();
}

bool MPR121_updateFilteredData(){
  if(!MPR121_isInited()) return(false);


  uint8_t MSB = 0, LSB = 0, index = 0, reg_addr = MPR121_E0FDL;
  taskENTER_CRITICAL();
  do {
	  if (HAL_I2C_Mem_Read(i2c_handle, address << 1, reg_addr, 1, &LSB, 1, I2C_TIMEOUT) != HAL_OK) return false;
	  reg_addr++;
	  if (HAL_I2C_Mem_Read(i2c_handle, address << 1, reg_addr, 1, &MSB, 1, I2C_TIMEOUT) != HAL_OK) return false;
	  reg_addr++;
	  filteredData[index] = ((MSB << 8) | LSB);
	  index++;
  } while (reg_addr <= MPR121_E12FDH);
  taskEXIT_CRITICAL();
return true;
}

bool MPR121_updateBaselineData(){
  if(!MPR121_isInited()) return(false);
  uint8_t index = 0, reg_data = 0;
  taskENTER_CRITICAL();
  for (uint8_t reg_addr = MPR121_E0BV; reg_addr <= MPR121_E12BV; reg_addr++) {
	  if (HAL_I2C_Mem_Read(i2c_handle, address << 1, reg_addr, 1, &reg_data, 1, I2C_TIMEOUT) != HAL_OK) return false;
	  baselineData[index] = reg_data;
	  index++;
  }
  taskEXIT_CRITICAL();
return true;
}

bool MPR121_autoSetElectrodeCDC_all(){
  bool scratch = true;
  for(uint8_t i=0; i < MPR121_getNumEnabledElectrodes(); i++){
    scratch = MPR121_autoSetElectrodeCDC_default(i) ? scratch : false;
  }

  return(scratch);
}
